renamed EnumMember to Member

--- a/source/Fasciculus.Site/Views/Api/Member.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Member.cshtml
@@ -1,6 +1,6 @@
-@model ApiEnumMemberViewModel
+@model ApiMemberViewModel
 @{
-    EnumMemberSymbol member = Model.Member;
+    MemberSymbol member = Model.Member;
 }
 <h1>@member.Name Member</h1>
 
