--- a/source/Fasciculus.Site/Views/Api/Enum.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Enum.cshtml
@@ -28,7 +28,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (EnumMemberSymbol member in Model.Enum.Members)
+        @foreach (MemberSymbol member in Model.Enum.Members)
         {
             <tr>
                 <td><a href="~/api/@(member.Link).html">@member.Name</a></td>
