--- a/source/Fasciculus.Site/Views/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using Fasciculus.Site
 @using Fasciculus.Site.Api.Models
 @using Fasciculus.Site.Blog.Models
+@using Fasciculus.Site.Licenses.Models
 @using Fasciculus.Site.Models
 @using Fasciculus.Site.Navigation
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
