partially added constructors

--- a/source/Fasciculus.Site/Views/Api/Class.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Class.cshtml
@@ -60,4 +60,6 @@
     <partial name="_Constructors.cshtml" model=Model.Class.Constructors />
 }
 
+<h2 id="applies-to">Applies To</h2>
+
 <partial name="_TargetFrameworks.cshtml" model=Model.Class.Frameworks />
