--- a/source/Fasciculus.Site/Views/Api/Enum.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Enum.cshtml
@@ -38,4 +38,6 @@
     </tbody>
 </table>
 
+<h2 id="applies-to">Applies To</h2>
+
 <partial name="_TargetFrameworks.cshtml" model=Model.Enum.Frameworks />
