--- a/source/Fasciculus.Site/Views/Api/Event.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Event.cshtml
@@ -20,4 +20,6 @@
 
 <p>@Html.Raw(ev.Comment.Summary)</p>
 
+<h2 id="applies-to">Applies To</h2>
+
 <partial name="_TargetFrameworks.cshtml" model=ev.Frameworks />
