--- a/source/Fasciculus.Site/Views/Api/Namespace.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Namespace.cshtml
@@ -68,4 +68,6 @@
     </table>
 }
 
+<h2 id="applies-to">Applies To</h2>
+
 <partial name="_TargetFrameworks.cshtml" model=Model.Namespace.Frameworks />
