--- a/source/Fasciculus.Site/Views/Api/Constructors.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Constructors.cshtml
@@ -4,7 +4,7 @@
 
 @foreach (ConstructorSymbol constructor in Model.Constructors)
 {
-    <h2>@constructor.Name</h2>
+    <h2 id="@constructor.Id">@constructor.Name</h2>
 
     <h3>Definition</h3>
 
