partially redesigned "applies-to"

--- a/source/Fasciculus.Site/Views/Api/Enum.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Enum.cshtml
@@ -38,6 +38,4 @@
     </tbody>
 </table>
 
-<h2 id="applies-to">Applies To</h2>
-
-<partial name="_TargetFrameworks.cshtml" model=Model.Enum.Frameworks />
+<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
