--- a/source/Fasciculus.Site/Views/Api/Interface.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Interface.cshtml
@@ -39,6 +39,4 @@
     <partial name="_Properties.cshtml" model=Model.Interface.Properties />
 }
 
-<h2 id="applies-to">Applies To</h2>
-
-<partial name="_TargetFrameworks.cshtml" model=Model.Interface.Frameworks />
+<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
