--- a/source/Fasciculus.Site/Views/Api/Namespace.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Namespace.cshtml
@@ -94,6 +94,4 @@
     </table>
 }
 
-<h2 id="applies-to">Applies To</h2>
-
-<partial name="_TargetFrameworks.cshtml" model=Model.Namespace.Frameworks />
+<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
