--- a/source/Fasciculus.Site/Views/Api/Member.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Member.cshtml
@@ -19,7 +19,4 @@
 
 <p>@Html.Raw(member.Comment.Summary)</p>
 
-<h2 id="applies-to">Applies To</h2>
-
-<partial name="_TargetFrameworks.cshtml" model=member.Frameworks />
-
+<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
