--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -29,6 +29,4 @@
     </tbody>
 </table>
 
-<h2 id="applies-to">Applies To</h2>
-
-<partial name="_TargetFrameworks.cshtml" model=Model.Package.Frameworks />
+<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
