--- a/source/Fasciculus.Site/Views/Api/Property.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Property.cshtml
@@ -20,6 +20,4 @@
 
 <p>@Html.Raw(property.Comment.Summary)</p>
 
-<h2 id="applies-to">Applies To</h2>
-
-<partial name="_TargetFrameworks.cshtml" model=property.Frameworks />
+<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
