--- a/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Site/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                     <ul class="nav">
                         <li class="nav-item"><a class="nav-link" href="~/"><img class="fsc-logo" src="~/images/fasciculus.png" /></a></li>
                         <li class="nav-item"><a class="nav-link" href="~/blog/">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="~/concepts/">Concepts</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/specifications/">Specifications</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/api/">APIs</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/releases.html">Releases</a></li>
