--- a/source/Fasciculus.Site/Views/Api/Enum.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Enum.cshtml
@@ -12,7 +12,7 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_SymbolInfo.cshtml" model=Model />
+<partial name="_SymbolInfo.cshtml" model=Model.Enum />
 
 <code>@Model.Enum.Modifiers enum @Model.Enum.Name</code>
 
