--- a/source/Fasciculus.Site/Views/Api/Field.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Field.cshtml
@@ -14,7 +14,7 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_SymbolInfo.cshtml" model=Model />
+<partial name="_SymbolInfo.cshtml" model=field />
 
 <code>@field.Modifiers @field.Type @field.Name</code>
 
