--- a/source/Fasciculus.Site/Views/Api/Member.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Member.cshtml
@@ -13,7 +13,7 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_SymbolInfo.cshtml" model=Model />
+<partial name="_SymbolInfo.cshtml" model=Model.Member />
 
 <code>@member.Name</code>
 
