--- a/source/Fasciculus.Site/Views/Api/Property.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Property.cshtml
@@ -14,7 +14,7 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_SymbolInfo.cshtml" model=Model />
+<partial name="_SymbolInfo.cshtml" model=Model.Property />
 
 <code>@property.Modifiers @property.Type @property.Name @property.Accessors</code>
 
