--- a/source/Fasciculus.Site/Views/Api/Event.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Event.cshtml
@@ -1,9 +1,11 @@
 @model ApiEventViewModel
 @{
-    IEventSymbol ev = Model.Event;
+    IEventSymbol evt = Model.Event;
+
+    ApiAppliesTo appliesTo = new(evt.Frameworks);
 }
 
-<h1>@ev.Name Event</h1>
+<h1>@evt.Name Event</h1>
 
 <h2>In this article</h2>
 
@@ -14,10 +16,10 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_SymbolInfo.cshtml" model=ev />
+<partial name="_SymbolInfo.cshtml" model=evt />
 
-<code>@ev.Modifiers event @ev.Type @ev.Name</code>
+<code>@evt.Modifiers event @evt.Type @evt.Name</code>
 
-<p>@Html.Raw(ev.Comment.Summary)</p>
+<p>@Html.Raw(evt.Comment.Summary)</p>
 
-<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
+<partial name="_AppliesTo.cshtml" model=appliesTo />
