--- a/source/Fasciculus.Site/Views/Api/Member.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Member.cshtml
@@ -1,6 +1,8 @@
 @model ApiMemberViewModel
 @{
     IMemberSymbol member = Model.Member;
+    ApiAppliesTo appliesTo = new(member.Frameworks);
+
 }
 <h1>@member.Name Member</h1>
 
@@ -13,10 +15,10 @@
 
 <h2 id="definition">Definition</h2>
 
-<partial name="_SymbolInfo.cshtml" model=Model.Member />
+<partial name="_SymbolInfo.cshtml" model=member />
 
 <code>@member.Name</code>
 
 <p>@Html.Raw(member.Comment.Summary)</p>
 
-<partial name="_AppliesTo.cshtml" model=Model.AppliesTo />
+<partial name="_AppliesTo.cshtml" model=appliesTo />
