--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -12,7 +12,10 @@
     <li><a href="#applies-to">Applies to</a></li>
 </ul>
 <h2 id="definition">Definition</h2>
-<p><a href="@(Model.PackageUri)">View on GitHub</a>.</p>
+@if (pkg.Name.Name != SiteConstants.CombinedPackageName)
+{
+    <p><a href="@(Model.PackageUri)">View on GitHub</a>.</p>
+}
 <p>@Html.Raw(pkg.Comment.Summary)</p>
 <h2 id="namespaces">Namespaces</h2>
 <table class="table">
