--- a/source/Fasciculus.Site/Views/Api/Package.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Package.cshtml
@@ -14,7 +14,7 @@
 <h2 id="definition">Definition</h2>
 @if (pkg.Name.Name != SiteConstants.CombinedPackageName)
 {
-    <p><a href="@(Model.PackageUri)">View on GitHub</a>.</p>
+    <p><a href="@(pkg.Repository)">View on GitHub</a>.</p>
 }
 <p>@Html.Raw(pkg.Comment.Summary)</p>
 <h2 id="namespaces">Namespaces</h2>
