--- a/source/Fasciculus.Site/Views/Api/Enum.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Enum.cshtml
@@ -19,7 +19,7 @@
 
 <partial name="_SymbolInfo.cshtml" model=enm />
 
-<code>@enm.Modifiers enum @enm.Name</code>
+<div class="csharp"><pre><code>@enm.Modifiers enum @enm.Name</code></pre></div>
 
 <p>@Html.Raw(@enm.Comment.Summary)</p>
 
