--- a/source/Fasciculus.Site/Views/Api/Interface.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Interface.cshtml
@@ -27,7 +27,7 @@
 
 <partial name="_SymbolInfo.cshtml" model=ifc />
 
-<code>@ifc.Modifiers interface @ifc.Name</code>
+<div class="csharp"><pre><code>@ifc.Modifiers interface @ifc.Name</code></pre></div>
 
 <p>@Html.Raw(ifc.Comment.Summary)</p>
 
