--- a/source/Fasciculus.Site/Views/Api/Member.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Member.cshtml
@@ -17,7 +17,7 @@
 
 <partial name="_SymbolInfo.cshtml" model=member />
 
-<code>@member.Name</code>
+<div class="csharp"><pre><code>@member.Name</code></pre></div>
 
 <p>@Html.Raw(member.Comment.Summary)</p>
 
