--- a/source/Fasciculus.Site/Views/Api/Event.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Event.cshtml
@@ -18,7 +18,7 @@
 
 <partial name="_SymbolInfo.cshtml" model=evt />
 
-<code>@evt.Modifiers event @evt.Type @evt.Name</code>
+<div class="csharp"><code>@evt.Modifiers event @evt.Type @evt.Name</code></pre></div>
 
 <p>@Html.Raw(evt.Comment.Summary)</p>
 
