--- a/source/Fasciculus.Site/Views/Api/Field.cshtml
+++ b/source/Fasciculus.Site/Views/Api/Field.cshtml
@@ -18,7 +18,7 @@
 
 <partial name="_SymbolInfo.cshtml" model=field />
 
-<code>@field.Modifiers @field.Type @field.Name</code>
+<div class="csharp"><pre><code>@field.Modifiers @field.Type @field.Name</code></pre></div>
 
 <p>@Html.Raw(field.Comment.Summary)</p>
 
