--- a/source/Fasciculus.Site/Views/Specifications/Index.cshtml
+++ b/source/Fasciculus.Site/Views/Specifications/Index.cshtml
@@ -2,4 +2,11 @@
 
 <h1>@Model.Title</h1>
 
+<h2>Fasciculus Specifications</h2>
+
 <p><a href="~/specifications/FixedPoint.html">Fixed Point Algorithms</a></p>
+
+<h2>External Specifications</h2>
+
+<p><a href="https://www.w3.org/TR/SVG2/">SVG 2</a></p>
+<p><a href="https://www.w3.org/TR/MathML3/">MathML 3</a></p>
