--- a/source/Fasciculus.Blog.Preview/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Blog.Preview/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
-            <p>&copy; 2024-2025 The Fasciculus Project.</p>
+            <p>Version: @Model.Version</p>
         </div>
     </footer>
 </body>
