--- a/source/Fasciculus.Blog.Preview/Views/Blog/Index.cshtml
+++ b/source/Fasciculus.Blog.Preview/Views/Blog/Index.cshtml
@@ -4,6 +4,6 @@
 <ul>
     @foreach(string key in Model.Keys)
     {
-        <li><a href="~/entry/@key">@key</a></li>
+        <li><a href="~/Entry/@key">@key</a></li>
     }
 </ul>
