--- a/source/Fasciculus.Docs.Preview/Views/Blog/Index.cshtml
+++ b/source/Fasciculus.Docs.Preview/Views/Blog/Index.cshtml
@@ -3,6 +3,6 @@
 <ul>
     @foreach(string key in Model.Keys)
     {
-        <li><a href="~/blog/@key">@key</a></li>
+        <li><a href="~/Blog/@key">@key</a></li>
     }
 </ul>
