--- a/source/Fasciculus.Docs.Preview/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Docs.Preview/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <ul class="nav">
                         <li class="nav-item"><a class="nav-link" href="~/"><img class="fsc-logo" src="~/images/fasciculus.png" /></a></li>
                         <li class="nav-item"><a class="nav-link" href="~/Blog/">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" href="~/">Specifications</a></li>
+                        <li class="nav-item"><a class="nav-link" href="~/Specifications/">Specifications</a></li>
                     </ul>
                 </div>
             </div>
