--- a/source/Fasciculus.Docs.Preview/Views/Shared/_Layout.cshtml
+++ b/source/Fasciculus.Docs.Preview/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                         <li class="nav-item"><a class="nav-link" href="~/"><img class="fsc-logo" src="~/images/fasciculus.png" /></a></li>
                         <li class="nav-item"><a class="nav-link" href="~/Blog/">Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="~/Specifications/">Specifications</a></li>
+                        <li class="nav-item"><a class="nav-link" href="~/Debug/">Debug</a></li>
                     </ul>
                 </div>
             </div>
